--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,16 +4,15 @@
         href="https://www.flaticon.com/free-icons/scooter"
         title="scooter icons"
     ><img src="./scooter.png" alt="scooter icons" class="icon" /></a>
-    <form>
+    <form method="post">
         <input type="text" name="first" />
         <p>First Name</p>
         <input type="text" name="last" />
         <p>Last Name</p>
         <input type="text" name="signature" class="hidden" />
-
+        <canvas id="canvas" width="500" height="150"></canvas>
+        <p>Sign Here</p>
+        <button id="submit">SUBMIT</button>
     </form>
-    <canvas id="canvas" width="500" height="150"></canvas>
-    {{! <canvas id="canvas"></canvas> }}
-    <p>Sign Here</p>
-    <button id="submit">SUBMIT</button>
+
 </div>
