final commit on the weekend for petition project part 1, functionality works, check status codes

--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -1,12 +1,7 @@
-<h1>Here are our signers!</h1>
-{{#each signers}}
-    <p>{{id}}
-        {{first}}
-        {{last}}, Link to signature
-        <a href="{{signature}}">Link to signature</a>
-    </p>
-{{/each}}
-
+<h1>Thank you for signing our Petition!</h1>
+<a href="/signers">Here you can find all
+    {{numSigner}}
+    other signers from our petition.</a>
 <footer>Copyright Julien 2022</footer>
 <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
