--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,4 @@
-<div>
+<main>
     <h1>Sign our petition to make Germany's traffic safe again!</h1>
     <a
         href="https://www.flaticon.com/free-icons/scooter"
@@ -14,5 +14,11 @@
         <p>Sign Here</p>
         <button id="submit">SUBMIT</button>
     </form>
-
-</div>
+</main>
+<footer>Copyright Julien 2022</footer>
+<script
+    src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"
+></script>
+<script src="script.js"></script>
