functionality works with 'cookie-session' try to remove 'cookie-parser' now

--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -2,8 +2,7 @@
 {{#each signers}}
     <p>{{id}}
         {{first}}
-        {{last}}, Link to signature
-        <a href="{{signature}}">Link to signature</a>
+        {{last}}
     </p>
 {{/each}}
 
