--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -1,4 +1,5 @@
 <h1>Thank you for signing our Petition!</h1>
+<img src="{{signature}}" alt="signature of petition signer" />
 <a href="/signers">Here you can find all
     {{numSigner}}
     other signers from our petition.</a>
