finally working again but still quite some stuff to do

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -10,7 +10,9 @@
         <p>Sign Here</p>
         <button id="submit">SUBMIT</button>
     </form>
+ 
 </main>
+{{>logoutButton}}
 <footer>Copyright Julien 2022</footer>
 <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
