--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -5,8 +5,8 @@
         {{last}}
     </p>
 {{/each}}
-
-<footer>Copyright Julien 2022</footer>
+{{>logoutButton}}
+<footer>Copyright Julien 2022 </footer>
 <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
