--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,6 +9,7 @@
     </form>
     <p>Haven't registered yet? Register <a href="/register">here</a>.</p>
 </main>
+{{>logoutButton}}
 <footer>Copyright Julien 2022</footer>
 <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
