--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -3,6 +3,7 @@
 <a href="/signers">Here you can find all
     {{numSigner}}
     other signers from our petition.</a>
+{{>logoutButton}}
 <footer>Copyright Julien 2022</footer>
 <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
