now working on petition 4

--- a/views/profiles.handlebars
+++ b/views/profiles.handlebars
@@ -1,10 +1,18 @@
-<form method="post">
-    <input type="text" name="city" />
-    <p>City</p>
-    <input type="number" name="age" />
-    <p>Age</p>
-    <input type="text" name="url" />
-    <p>URL</p>
-    <button id="submit">LOGIN</button>
-</form>
+<main>
+    <form method="post">
+        <input type="text" name="city" />
+        <p>City</p>
+        <input type="number" name="age" />
+        <p>Age</p>
+        <input type="text" name="url" />
+        <p>URL</p>
+        <button id="submit">SUBMIT</button>
+    </form>
+</main>
 {{>logoutButton}}
+<footer>Copyright Julien 2022</footer>
+<script
+    src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"
+></script>
