final commit, many functionalities added, also 'delete Account', tomorrow final check before deploying on heroku

--- a/views/profiles.handlebars
+++ b/views/profiles.handlebars
@@ -6,7 +6,7 @@
         <p>Age</p>
         <input type="text" name="url" />
         <p>URL</p>
-        <button id="submit">SUBMIT</button>
+        <button id="submit">CONTINUE</button>
     </form>
 </main>
 {{>logoutButton}}
