--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -19,4 +19,4 @@
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
     crossorigin="anonymous"
 ></script>
-<script src="script.js"></script>
+<script src="/script.js"></script>
