--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,10 +1,28 @@
 <h1>Here are our signers!</h1>
 {{#each signers}}
     <p>{{id}}
-        {{first}}
-        {{last}}
+        {{#if city}}
+            {{#if url}}
+                <a href="{{url}}">{{first}} {{last}}</a>
+                {{age}}
+                <a href="/signers/{{city}}">{{city}}</a>
+            {{else}}
+                {{first}} {{last}}
+                {{age}}
+                <a href="/signers/{{city}}">{{city}}</a>
+            {{/if}}
+        {{else}}
+            {{#if url}}
+                <a href="{{url}}">{{first}} {{last}}</a>
+                {{age}}
+            {{else}}
+                {{first}} {{last}}
+                {{age}}
+            {{/if}}
+        {{/if}}
     </p>
 {{/each}}
+{{>editButton}}
 {{>logoutButton}}
 <footer>Copyright Julien 2022 </footer>
 <script
@@ -12,4 +30,4 @@
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
     crossorigin="anonymous"
 ></script>
-<script src="script-signers.js"></script>
+<script src="/script-signers.js"></script>
