--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -3,6 +3,10 @@
 <a href="/signers">Here you can find all
     {{numSigner}}
     other signers from our petition.</a>
+    {{>editButton}}
+    {{>deleteButton}}
+    {{>deleteAccountButton}}
+
 {{>logoutButton}}
 <footer>Copyright Julien 2022</footer>
 <script
@@ -10,4 +14,4 @@
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
     crossorigin="anonymous"
 ></script>
-<script src="script-signers.js"></script>
+<script src="/script-signers.js"></script>
