handled asynchronity of deleteSignature and deleteAccout

--- a/views/profiles-edit.handlebars
+++ b/views/profiles-edit.handlebars
@@ -16,7 +16,7 @@
         <p>Age</p>
         <input type="text" name="url" value="{{profileData.[0].url}}"/>
         <p>URL</p>
-        <button id="submit">SAVE</button>
+        <button id="submit">UPDATE</button>
     </form>
 </main>
 <button><a href="/petition">GO BACK TO PETITION</a></button>
