--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -7,7 +7,7 @@
         <p>Last Name</p>
         <input type="text" name="email" />
         <p>Email Adress</p>
-        <input type="text" name="password" />
+        <input type="password" name="password" />
         <p>Password</p>
         <button id="submit">REGISTER</button>
     </form>
