--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,9 @@
         <title>Home</title>
     </head>
     <body>
+        <header>
+            {{>menuButton}}
+        </header>
         {{{body}}}
     </body>
 </html>
