--- a/views/profiles-edit.handlebars
+++ b/views/profiles-edit.handlebars
@@ -1,4 +1,5 @@
 <main>
+    <div id="container">
     <h1>Account details</h1>
     <h2>Here you can change your account details</h2>
     <form method="post">
@@ -18,9 +19,10 @@
         <p>URL</p>
         <button id="submit">UPDATE</button>
     </form>
-</main>
+    </div>
 <button><a href="/petition">GO BACK TO PETITION</a></button>
 {{>logoutButton}}
+</main>
 <footer>Copyright Julien 2022</footer>
 <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
