--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,18 +1,20 @@
 <main>
-    <h1>Sign our petition to make Germany's traffic safe again!</h1>
-    <a
-        href="https://www.flaticon.com/free-icons/scooter"
-        title="scooter icons"
-    ><img src="./scooter.png" alt="scooter icons" class="icon" /></a>
-    <form method="post">
-        <input type="text" name="signature" class="hidden" />
-        <canvas id="canvas" width="500" height="150"></canvas>
-        <p>Sign Here</p>
-        <button id="submit">SUBMIT</button>
-    </form>
- 
+    <div id="container">
+        <h1>Sign our petition to make Germany's traffic safe again!</h1>
+        <a
+            href="https://www.flaticon.com/free-icons/scooter"
+            title="scooter icons"
+        ><img src="./scooter.png" alt="scooter icons" class="icon" /></a>
+        <form id="signForm" method="post">
+            <input type="text" name="signature" class="hidden" />
+            <canvas id="canvas" width="500" height="150"></canvas>
+            <p>Sign Here</p>
+            <button id="submit">SUBMIT</button>
+        </form>
+ {{>logoutButton}}
+ </div>
 </main>
-{{>logoutButton}}
+
 <footer>Copyright Julien 2022</footer>
 <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
