--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,5 @@
 <main>
+    <div id="container">
     <h1>Please Log in to sign our Petition!</h1>
     <form method="post">
         <input type="text" name="email" />
@@ -8,8 +9,9 @@
         <button id="submit">LOGIN</button>
     </form>
     <p>Haven't registered yet? Register <a href="/register">here</a>.</p>
-</main>
 {{>logoutButton}}
+    </div>
+</main>
 <footer>Copyright Julien 2022</footer>
 <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
