--- a/views/profiles.handlebars
+++ b/views/profiles.handlebars
@@ -1,4 +1,5 @@
 <main>
+    <div id="container">
     <form method="post">
         <input type="text" name="city" />
         <p>City</p>
@@ -8,8 +9,9 @@
         <p>URL</p>
         <button id="submit">CONTINUE</button>
     </form>
-</main>
 {{>logoutButton}}
+</div>
+</main>
 <footer>Copyright Julien 2022</footer>
 <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
