--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,17 +1,19 @@
 <main>
-    <h1>Please Register to sign our Petition!</h1>
-    <form method="post">
-        <input type="text" name="first" />
-        <p>First Name</p>
-        <input type="text" name="last" />
-        <p>Last Name</p>
-        <input type="text" name="email" />
-        <p>Email Adress</p>
-        <input type="password" name="password" />
-        <p>Password</p>
-        <button id="submit">REGISTER</button>
-    </form>
-    <p>Already registered? Login <a href="/login">here</a>.</p>
+    <div id="container">
+        <h1>Please Register to sign our Petition!</h1>
+        <form method="post">
+            <input type="text" name="first" />
+            <p>First Name</p>
+            <input type="text" name="last" />
+            <p>Last Name</p>
+            <input type="text" name="email" />
+            <p>Email Adress</p>
+            <input type="password" name="password" />
+            <p>Password</p>
+            <button id="submit">REGISTER</button>
+        </form>
+        <p>Already registered? Login <a href="/login">here</a>.</p>
+    </div>
 </main>
 <footer>Copyright Julien 2022</footer>
 <script
