--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,3 +1,5 @@
+<main>
+    <div id="container">
 <h1>Here are our signers!</h1>
 {{#each signers}}
     <p>{{id}}
@@ -24,6 +26,8 @@
 {{/each}}
 {{>editButton}}
 {{>logoutButton}}
+</div>
+</main>
 <footer>Copyright Julien 2022 </footer>
 <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
