--- a/views/signers_city.handlebars
+++ b/views/signers_city.handlebars
@@ -1,4 +1,6 @@
 
+<main>
+    <div id="container">
 <h1>Here are our signers from {{signers.[0].city}}!</h1>
 {{#each signers}}
     <p>{{id}}
@@ -13,6 +15,8 @@
 {{/each}}
 <p><a href="/signers">Go back to Signers</a></p>
 {{>logoutButton}}
+</div>
+</main>
 <footer>Copyright Julien 2022 </footer>
 <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
