issues with the canvas and menu button

--- a/views/partials/deleteButton.handlebars
+++ b/views/partials/deleteButton.handlebars
@@ -1,3 +1,3 @@
 <form action="/petition/delete" method="post">
-    <button>Delete Signature</button>
+    <button>Yes, I want to delete my signature</button>
 </form>
