--- a/views/partials/menuButton.handlebars
+++ b/views/partials/menuButton.handlebars
@@ -1,1 +1,14 @@
-<button id="menu">MENU</button>
+{{! <button id="menu">MENU</button> }}
+<div id="menu-button">
+    <img id="menu" src="./hamburgermenu.svg" alt="menu-button" />
+</div>
+<div id="overlay" class="event">
+    <nav id="navigation" class="event">
+        <div id="close-button">X</div>
+        <div class="menu-section">Logout/div>
+        <div class="menu-section">Edit profile</div>
+        <div class="menu-section">Upgrade</div>
+        <div class="menu-section">Subscribe</div>
+        <div id="logout" class="menu-section">Log out</div>
+    </nav>
+</div>
