--- a/views/signers_city.handlebars
+++ b/views/signers_city.handlebars
@@ -17,10 +17,4 @@
 {{>logoutButton}}
 </div>
 </main>
-<footer>Copyright Julien 2022 </footer>
-<script
-    src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-    crossorigin="anonymous"
-></script>
-{{!-- <script src="script-signers.js"></script> --}}
+    {{>jquery}}
