--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@
 
 header,
 footer {
-    background-color: black;
+    background-color: rgb(1, 28, 35);
     color: white;
     width: 100vw;
     height: 8vh;
@@ -15,8 +15,14 @@ footer {
     justify-content: flex-end;
 }
 
+h1,
+h3,
+form {
+    text-align: center;
+}
+
 footer {
-    background-color: black;
+    /* background-color: black; */
     justify-content: flex-start;
     align-items: center;
 }
@@ -31,6 +37,7 @@ main {
     background-image: url("./vespa_background.jpg");
     /* filter: contrast(0.9); */
     background-size: cover;
+    background-position: center;
     /* position: relative; */
 }
 
@@ -45,11 +52,13 @@ div#container {
     opacity: 70%;
 }
 
-button#menu {
-    background-color: black;
-    color: white;
-    border-radius: 50%;
-    border: solid white 3px;
+img#menu {
+    /* background-color: black; */
+    width: 6vh;
+    height: 6vh;
+    /* color: white; */
+    /* border-radius: 50%; */
+    /* border: solid white 3px; */
 }
 
 .hidden {
@@ -60,7 +69,7 @@ canvas {
     /* position: absolute; */
     width: 55vw;
     height: 20vh;
-    border: 3px solid red;
+    border: 3px solid rgb(1, 28, 35);
     /* left: 200px; */
     /* top: 200px; */
 }
@@ -72,7 +81,7 @@ img#signImg {
 }
 
 img.icon {
-    width: 20vw;
+    width: 10vw;
     height: auto;
 }
 
@@ -80,4 +89,45 @@ form#signForm {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+
+/* menu button styles */
+.event {
+    position: fixed;
+    visibility: hidden;
+    height: 100vh;
+    width: 20vw;
+    z-index: 1;
+}
+#close-button {
+    color: black;
+    /* position: absolute; */
+    font-weight: 700;
+    right: 2vw;
+    top: 2vh;
+}
+
+.menu-section {
+    /* margin-left: 5vw; */
+    /* margin-top: 5vh; */
+    color: blue;
+    font-size: 5vh;
+}
+
+#logout {
+    font-size: 2.5vh;
+}
+
+.appear {
+    visibility: visible;
+}
+
+.move-to-the-left {
+    transform: translateX(-100%);
+    background-color: white;
+}
+
+#menu-button {
+    display: flex;
+    align-items: center;
 }
