--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,7 +4,7 @@
     <form method="post">
         <input type="text" name="email" />
         <p>Email Adress</p>
-        <input type="text" name="password" />
+        <input type="password" name="password" />
         <p>Password</p>
         <button id="submit">LOGIN</button>
     </form>
@@ -12,10 +12,4 @@
 {{>logoutButton}}
     </div>
 </main>
-<footer>Copyright Julien 2022</footer>
-<script
-    src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-    crossorigin="anonymous"
-></script>
-{{! <script src="script.js"></script> }}
+    {{>jquery}}
