--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -15,10 +15,4 @@
         <p>Already registered? Login <a href="/login">here</a>.</p>
     </div>
 </main>
-<footer>Copyright Julien 2022</footer>
-<script
-    src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-    crossorigin="anonymous"
-></script>
-{{! <script src="script.js"></script> }}
+    {{>jquery}}
