--- a/views/partials/deleteAccountButton.handlebars
+++ b/views/partials/deleteAccountButton.handlebars
@@ -1,3 +1,1 @@
-<form action="/petition/delete-account" method="post">
-    <button>!!!DELETE ACCOUNT!!!</button>
-</form>
+<button><a href="/petition/delete-account">DELETE ACCOUNT</a></button>
