--- a/views/partials/deleteButton.handlebars
+++ b/views/partials/deleteButton.handlebars
@@ -1,3 +1,1 @@
-<form action="/petition/delete" method="post">
-    <button>Yes, I want to delete my signature</button>
-</form>
+<button><a href="/petition/delete">DELETE SIGNATURE</a></button>
