--- a/views/profiles-edit.handlebars
+++ b/views/profiles-edit.handlebars
@@ -1,3 +1,4 @@
+<header>{{>backToPetitionButton}}{{>logoutButton}} </header>
 <main>
     <div id="container">
     <h1>Account details</h1>
@@ -20,7 +21,7 @@
         <button id="submit">UPDATE</button>
     </form>
     </div>
-<button><a href="/petition">GO BACK TO PETITION</a></button>
-{{>logoutButton}}
+
+
 </main>
     {{>jquery}}
