--- a/views/profiles.handlebars
+++ b/views/profiles.handlebars
@@ -1,3 +1,4 @@
+<header>{{>logoutButton}}</header>
 <main>
     <div id="container">
     <form method="post">
@@ -9,7 +10,7 @@
         <p>URL</p>
         <button id="submit">CONTINUE</button>
     </form>
-{{>logoutButton}}
+
 </div>
 </main>
     {{>jquery}}
