--- a/views/delete-account.handlebars
+++ b/views/delete-account.handlebars
@@ -1,7 +1,11 @@
+<header>{{>backToPetitionButton}}{{>logoutButton}}</header>
 <main>
     <div id="container">
 <h1>Do you really want to delete your whole account including your signature???</h1>
-    {{>deleteAccountButton}}
+
+<form action="/petition/delete-account" method="post">
+    <button>!!!DELETE ACCOUNT!!!</button>
+</form>
 <button><a href="/petition">No, I want to go back to the petition</a></button>    
 
 {{>logoutButton}}
