--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,4 @@
+<header></header>
 <main>
     <div id="container">
     <h1>Please Log in to sign our Petition!</h1>
@@ -8,8 +9,8 @@
         <p>Password</p>
         <button id="submit">LOGIN</button>
     </form>
-    <p>Haven't registered yet? Register <a href="/register">here</a>.</p>
-{{>logoutButton}}
+{{>registerLink}}
+
     </div>
 </main>
     {{>jquery}}
