--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,3 +1,4 @@
+<header>{{>editButton}}{{>backToPetitionButton}}{{>logoutButton}}</header>
 <main>
     <div id="container">
 <h1>Here are our signers!</h1>
@@ -24,8 +25,7 @@
         {{/if}}
     </p>
 {{/each}}
-{{>editButton}}
-{{>logoutButton}}
+
 </div>
 </main>
     {{>jquery}}
