final commit monday, functionality should work, basic layout is fine, fine tuning tomorrow morning

--- a/views/delete-account.handlebars
+++ b/views/delete-account.handlebars
@@ -4,11 +4,11 @@
 <h1>Do you really want to delete your whole account including your signature???</h1>
 
 <form action="/petition/delete-account" method="post">
-    <button>!!!DELETE ACCOUNT!!!</button>
+    <button class="body">DELETE ACCOUNT</button>
 </form>
-<button><a href="/petition">No, I want to go back to the petition</a></button>    
+<button class="body"><a href="/petition">No, I want to go back to the petition</a></button>    
 
-{{>logoutButton}}
+
 </div>
 </main>
     {{>jquery}}
