--- a/views/delete-signature.handlebars
+++ b/views/delete-signature.handlebars
@@ -4,9 +4,9 @@
 <h1>Do you really want to delete your signature?</h1>
 
 <form action="/petition/delete" method="post">
-    <button>Yes, I want to delete my signature</button>
+    <button class="body">Yes, I want to delete my signature</button>
 </form>
-<button><a href="/petition">No, I want to go back to the petition</a></button>    
+<button class="body"><a href="/petition">No, I want to go back to the petition</a></button>    
 
 </div>
 </main>
