--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -15,7 +15,8 @@
             <input type="text" name="signature" class="hidden" width="0" height="0"/>
             {{!-- <canvas id="canvas" width="500" height="150"></canvas> --}}
   
-            <button id="submit">SUBMIT</button>
+            <button class="body" id="submit">SUBMIT</button>
+            <br>
         </form>
 
  </div>
