--- a/views/partials/deleteAccountButton.handlebars
+++ b/views/partials/deleteAccountButton.handlebars
@@ -1,1 +1,1 @@
-<button><a href="/petition/delete-account">DELETE ACCOUNT</a></button>
+<a class="header" href="/petition/delete-account">DELETE ACCOUNT</a>
