--- a/views/partials/deleteButton.handlebars
+++ b/views/partials/deleteButton.handlebars
@@ -1,1 +1,1 @@
-<button><a href="/petition/delete">DELETE SIGNATURE</a></button>
+<button class="body"><a href="/petition/delete">DELETE SIGNATURE</a></button>
