--- a/views/profiles.handlebars
+++ b/views/profiles.handlebars
@@ -4,11 +4,15 @@
     <form method="post">
         <input type="text" name="city" />
         <p>City</p>
-        <input type="number" name="age" />
+        <br>
+        <input type="number" min="0" name="age" />
         <p>Age</p>
+        <br>
         <input type="text" name="url" />
         <p>URL</p>
-        <button id="submit">CONTINUE</button>
+        <br>
+        <button class="body" id="submit">CONTINUE</button>
+        <br>
     </form>
 
 </div>
