--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -2,7 +2,7 @@
 <main>
     <div id="container">
 <h1>Thank you for signing our Petition!</h1>
-<h3>With Your sgnature you made Germany's traffic a safer place ⛑</h3>
+<h3>With Your signature you made Germany's traffic a safer place ⛑</h3>
 <img id="signImg" src="{{signature}}" alt="signature of petition signer" />
 {{>deleteButton}}
 <a href="/signers">Here you can find all
