--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,7 +9,7 @@
         <input type="password" name="password" />
         <p>Password</p>
         <br>
-        <button id="submit">LOGIN</button>
+        <button class="body" id="submit">LOGIN</button>
     </form>
 {{>registerLink}}
 
