--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -15,7 +15,8 @@
             <input type="password" name="password" />
             <p>Password</p>
             <br>
-            <button id="submit">REGISTER</button>
+            <button class="body" id="submit">REGISTER</button>
+            <br>
         </form>
         <p>Already registered? Login <a href="/login">here</a>.</p>
     </div>
