--- a/views/profiles.handlebars
+++ b/views/profiles.handlebars
@@ -1,6 +1,7 @@
 <header>{{>logoutButton}}</header>
 <main>
     <div id="container">
+        <h2>If you want, you can add addtional infos about yourself</h2>
     <form method="post">
         <input type="text" name="city" />
         <p>City</p>
