--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -7,7 +7,7 @@
 {{>deleteButton}}
 <a href="/signers">Here you can find all
     {{numSigner}}
-    other signers from our petition.</a>
+    signers from our petition.</a>
     
 
 
